--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </section>
             <hr class="m-0" />
             <!-- Interests-->
-            <section class="resume-section" id="interests">
+            <section class="resume-section" id="objective">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Objective</h2>
                     <p>To enhance my professional skills, capabilities and knowledge in an organization which recognizes the value of hard work and trusts me with responsibilities and challenges.</p>
